# v360

vivamente360/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
vivamente360/alembic/: env.py  rls_policies.sql
vivamente360/alembic/versions/: 20240101_0000_3a8f9b2c1d4e_initial_schema.py  20240101_0001_5e6f7a8b9c0d_rls_policies.py  20240102_0000_a1b2c3d4e5f6_auth_blueprint_03.py  20240103_0000_b2c3d4e5f6a7_blueprint_04_task_queue.py  20240104_0000_c3d4e5f6a7b8_blueprint_06_star_schema.py  20240105_0000_c3d4e5f6a7b8_blueprint_05_email_service.py  20240105_0000_c3d4e5f6a7b9_blueprint_05_email_service.py  20240106_0000_d4e5f6a7b8c9_blueprint_02_checklist_nr1.py  20240106_0000_e5f6a7b8c9d0_blueprint_01_storage_r2.py  20240107_0000_e5f6a7b8c9d0_blueprint_03_action_plans.py  20240108_0000_f7a8b9c0d1e2_blueprint_04_survey_sentiment.py  20240109_0000_a9b0c1d2e3f4_blueprint_06_ai_analyses.py  20240110_0000_b0c1d2e3f4a5_blueprint_07_whistleblower.py  20240111_0000_c1d2e3f4a5b6_blueprint_08_notifications.py  20240112_0000_d2e3f4a5b6c7_blueprint_09_dashboard_filters.py
vivamente360/scripts/: init-db.sql  worker.py
vivamente360/seeds/: __init__.py  checklist_nr1.py
vivamente360/src/: main.py
vivamente360/src/application/services/: action_plan_service.py  ai_analysis_service.py  auth_service.py  campaign_service.py  checklist_service.py  email_service.py  notification_service.py  score_service.py  storage_service.py  whistleblower_service.py
vivamente360/src/domain/entities/: user.py
vivamente360/src/domain/enums/: __init__.py  action_plan_status.py  campaign_status.py  company_plan.py  dimensao_hse.py  email_log_status.py  email_template_type.py  file_contexto.py  nivel_risco.py  notification_tipo.py  sentimento_type.py  task_queue_status.py  task_queue_type.py  user_role.py  whistleblower_categoria.py  whistleblower_status.py
vivamente360/src/infrastructure/admin/: views.py
vivamente360/src/shared/: config.py  exceptions.py  security.py
vivamente360/tests/: conftest.py
vivamente360/tests/integration/: test_action_plan_router.py  test_ai_analysis_router.py  test_auth_router.py  test_campaign_router.py  test_health.py  test_notifications_router.py  test_survey_response_router.py  test_whistleblower_router.py
vivamente360/tests/unit/: test_action_plan_service.py  test_ai_analysis_service.py  test_analytics_repository.py  test_auth_dependency.py  test_auth_schemas.py  test_auth_service.py  test_campaign_repository.py  test_campaign_service.py  test_checklist_repository.py  test_checklist_schemas.py  test_checklist_service.py  test_config.py  test_email_service.py  test_exceptions.py  test_file_repository.py  test_file_schemas.py  test_notification_repository.py  test_notification_schemas.py  test_r2_adapter.py  test_security.py  test_survey_response_schemas.py  test_token_repository.py  test_whistleblower_repository.py  test_whistleblower_schemas.py  test_whistleblower_service.py
(+160 files in other folders)
