[tool.poetry]
name = "vivamente360"
version = "1.0.0"
description = "VIVAMENTE 360º — Plataforma de avaliação psicossocial B2B"
authors = ["VIVAMENTE Team"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.111"
uvicorn = { extras = ["standard"], version = ">=0.29" }
sqlalchemy = ">=2.0"
alembic = ">=1.13"
sqladmin = ">=0.16"
pydantic = ">=2.7"
pydantic-settings = ">=2.2"
python-jose = { extras = ["cryptography"], version = ">=3.3" }
passlib = { extras = ["bcrypt"], version = ">=1.7" }
resend = ">=1.1"
python-multipart = ">=0.0.9"
httpx = ">=0.27"
asyncpg = ">=0.29"
greenlet = ">=3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
pytest-cov = ">=5.0"
ruff = ">=0.4"
mypy = ">=1.10"
httpx = ">=0.27"

[tool.poetry.scripts]
dev = "uvicorn src.main:app --reload --host 0.0.0.0 --port 8000"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "alembic/*"]
