[tool.poetry]
name = "vivamente360"
version = "1.0.0"
description = "VIVAMENTE 360º — Plataforma de avaliação 360 graus para o mercado B2B"
authors = ["VIVAMENTE <dev@vivamente.com.br>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.111"
uvicorn = {extras = ["standard"], version = ">=0.29"}
sqlalchemy = ">=2.0"
alembic = ">=1.13"
sqladmin = ">=0.16"
pydantic = ">=2.7"
pydantic-settings = ">=2.2"
email-validator = ">=2.0.0"
python-jose = {extras = ["cryptography"], version = ">=3.3"}
passlib = {extras = ["bcrypt"], version = ">=1.7"}
resend = ">=1.1"
python-multipart = ">=0.0.9"
httpx = ">=0.27"
asyncpg = ">=0.29"
psycopg2-binary = ">=2.9"
boto3 = ">=1.34"
slowapi = ">=0.1.9"
aiofiles = ">=23.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
pytest-cov = ">=5.0"
ruff = ">=0.4"
mypy = ">=1.10"
httpx = ">=0.27"

[tool.poetry.scripts]
dev = "uvicorn src.main:app --reload --host 0.0.0.0 --port 8000"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
